--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc --build",
     "start": "ts-node-dev src/server.ts",
-    "test": "NODE_ENV=test PORT=7788 jest",
+    "test": "SET NODE_ENV=test & SET PORT=7788 & jest --maxWorkers=1 --forceExit --detectOpenHandles",
     "test:watch": "npm run test -- --watchAll",
     "prepare": "husky install",
     "lint:script": "eslint --ext .ts --ignore-path .gitignore ."
@@ -15,12 +15,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/multer": "^3.0.0",
+    "class-validator": "^0.13.1",
     "koa": "^2.13.1",
     "koa-bodyparser": "^4.3.0",
     "koa-json": "^2.0.2",
     "koa-logger": "^3.2.1",
     "koa-router": "^10.0.0",
     "koa2-cors": "^2.0.6",
+    "module-alias": "^2.2.2",
+    "multer": "^1.4.2",
     "ts-node": "^10.1.0",
     "typescript": "^4.3.5"
   },
@@ -38,18 +42,22 @@
     "lint-staged": "^11.1.1",
     "prettier": "^2.3.2",
     "pretty-quick": "^3.1.1",
+    "supertest": "^6.1.4",
     "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.8"
   },
+  "_moduleAliases": {
+    "@": "./src"
+  },
   "jest": {
-    "verbose": true,
-    "collectCoverage": true,
+    "verbose": false,
+    "collectCoverage": false,
     "modulePathIgnorePatterns": [
       "<rootDir>/node_modules/"
     ],
-    "roots": [
-      "<rootDir>/__tests__"
-    ],
+    "moduleNameMapper": {
+      "@src/(.*)": "<rootDir>/src/$1"
+    },
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
@@ -57,7 +65,6 @@
     "testPathIgnorePatterns": [
       "/node_modules/"
     ],
-    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.tsx?$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
